# river-flow

./: pyproject.toml  requirements.demo.txt  requirements.txt
src/: demo.py  demo1b.py  demo2.py  demo3.py  demo4.py  demo4b.py  demo5.py  fast_solver.py  foo.py  pseudo_solver.py  solver.py
